[gd_scene load_steps=7 format=2]

[ext_resource path="res://buttons/_continue_button.png" type="Texture" id=1]
[ext_resource path="res://scripts/EndOfDayReport.gd" type="Script" id=2]
[ext_resource path="res://images/end_of_day_scene_ .png" type="Texture" id=3]
[ext_resource path="res://fonts/CooperBlackStd.otf" type="DynamicFontData" id=4]
[ext_resource path="res://SubtitleFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[node name="end_of_day_scene" type="Node2D"]
z_index = 101
script = ExtResource( 2 )

[node name="end_of_day_background" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="Title" type="Label" parent="."]
margin_left = 1.0
margin_top = 182.0
margin_right = 1025.0
margin_bottom = 282.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0392157, 0, 0.576471, 1 )
custom_fonts/font = SubResource( 1 )
text = "End of day report"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="."]
margin_left = -1.0
margin_top = 476.0
margin_right = 1023.0
margin_bottom = 518.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0352941, 0.372549, 0.211765, 1 )
custom_fonts/font = ExtResource( 5 )
text = "You have sold X musubi"
align = 1
valign = 1

[node name="OkayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 312.0
margin_top = 656.0
margin_right = 1140.0
margin_bottom = 869.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 136, 16 )
icon = ExtResource( 1 )
flat = true

[node name="RiceSubtitle" type="Label" parent="."]
margin_left = 2.0
margin_top = 551.0
margin_right = 1026.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( 555, 74 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.85098, 0.113725, 0.113725, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Your leftover rice has gone bad."
align = 1
valign = 1

[node name="PosterSubtitle" type="Label" parent="."]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 617.0
rect_pivot_offset = Vector2( 549, 55 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.113725, 0.145098, 0.85098, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Your posters created 6.4X more traffic today."
align = 1
valign = 1

[node name="PopSubtitle" type="Label" parent="."]
margin_top = 517.0
margin_right = 1024.0
margin_bottom = 549.0
rect_pivot_offset = Vector2( 549, 55 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.6, 0.113725, 0.85098, 1 )
custom_fonts/font = ExtResource( 5 )
text = "100 people walked by your stand."
align = 1
valign = 1

[connection signal="pressed" from="OkayButton" to="." method="_on_OkayButton_pressed"]
